--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img src="banner.jpg">    
+<img src="banner.jpg"> 
+    <div class="principal">
 <h1> Sobre a Barbearia Alura  </h1>
     
 <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
@@ -17,6 +18,15 @@
 
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
     O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-
+    </div>
+    <div class="beneficios">
+        <ul>
+            <li class="itens"> Atendimento aos clientes</li>
+            <li class="itens"> Espaço diferenciado</li>
+            <li class="itens"> Localização</li>
+            <li class="itens"> Profissionais qualificados</li>
+        </ul>
+        <img>
+    </div>
 </body>
 </html>
