--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <header>
+    <h1 class="titulo-principal">Barbearia alura</h1>
+ </header> 
     <img src="banner.jpg"> 
     <div class="principal">
-    <h1> Sobre a Barbearia Alura  </h1>
+    <h2> Sobre a Barbearia Alura  </h2>
 
         
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
@@ -21,6 +24,7 @@
     O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     </div>
     <div class="beneficios">
+    <h3 class="Titulo-secundario">Benefícios</h3>
         <ul>
             <li class="itens">Atendimento aos clientes</li>
             <li class="itens">Espaço diferenciado</li>
