--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
- <header>
-    <h1 class="titulo-principal">Barbearia alura</h1>
- </header> 
-    <img src="banner.jpg"> 
+    <header>
+        <h1 class="titulo-principal">Barbearia alura</h1>
+    </header>
+    <img src="banner.jpg">
     <div class="principal">
-    <h2> Sobre a Barbearia Alura  </h2>
+        <h2> Sobre a Barbearia Alura </h2>
 
-        
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-    Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+            para o seu cabelo e barba.
+            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-    O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
+                    clientes"</strong>.</em></p>
+
+        <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
+            O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
+            clientes.</p>
     </div>
     <div class="beneficios">
-    <h3 class="Titulo-secundario">Benefícios</h3>
+        <h3 class="Titulo-secundario">Benefícios</h3>
         <ul>
             <li class="itens">Atendimento aos clientes</li>
             <li class="itens">Espaço diferenciado</li>
@@ -33,6 +38,7 @@
         </ul>
         <img src="beneficios.jpg" class="imagem-beneficios">
     </div>
-    
+
 </body>
+
 </html>
