--- a/produtos.html
+++ b/produtos.html
@@ -1,13 +1,15 @@
 <title>Produtos-Barbearia</title>
 <link ref="styleheet" href="produtos.css">
+<nav>
 <body>
         <header>
             <h1><img src="logo.png"></h1>
 
             <ul>
-                <li>Home</li>
-                <li>Produtos</li>
-                <li>Contato</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html"Produtos</a></li>
+                <li><a href="contato.html"Contato</a></li>
             </ul>
         </header>
     </body>
+</nav>
