--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,12 @@
-<title>Produtos-Barbearia</title>
-<link ref="styleheet" href="produtos.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Produtos-Barbearia</title>
+    <link ref="styleheet" href="produtos.css">
+</head>
+<body>
 <nav>
 <body>
         <header>
@@ -13,3 +20,5 @@
         </header>
     </body>
 </nav>
+</body>
+</html>
