--- a/produtos.html
+++ b/produtos.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos-Barbearia</title>
     <link ref="styleheet" href="produtos.css">
+    <link ref="styleheet" href="reset.css">
 </head>
 <body>
 <nav>
 <body>
         <header>
+        <div class="caixa">
             <h1><img src="logo.png"></h1>
 
             <ul>
