--- a/produtos.html
+++ b/produtos.html
@@ -20,6 +20,28 @@
                 <li><a href="contato.html"Contato</a></li>
             </ul>
         </header>
+    <main>
+        <ul class="produtos">
+        <li>
+            <h2>Cabelo</h2>
+            <img>
+            <p class="produto-descricao">Tesoura ou máquina</p>
+            <p class="produto-preco">R$25,00</p>
+        </li>
+        <li>
+            <h2>Barba</h2>
+            <img>
+            <p class="produto-descricao">Navalha ou máquina</p>
+            <p class="produto-preco">R$25,00</p>
+        </li>
+        <li>
+           <h2>Cabelo e Barba</h2>
+            <img>
+            <p class="produto-descricao">Pacote completo</p>
+            <p class="produto-preco">R$45,00</p>
+        </li>
+        </ul>
+    </main>
     </body>
 </nav>
 </body>
