--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1><img src="logo.png"></h1>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="produtos.html"Produtos</a></li>
                 <li><a href="contato.html"Contato</a></li>
             </ul>
