--- a/index.html
+++ b/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
- <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos-Barbearia</title>
-    <link ref="styleheet" href="produtos.css">
-    <link ref="styleheet" href="reset.css">
-  </head>
-  <body>
-   <nav>
-  <body>
-     <header>
-        <div class="caixa">
-            <h1><img src="logo.png"></h1>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Barbearia Alura</title>
 
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="produtos.html"Produtos</a></li>
-                <li><a href="contato.html"Contato</a></li>
-            </ul>
-      </header>
-      <main>
-        <ul class="produtos">
-         <li>
-            <h2>Cabelo</h2>
-            <img>
-            <p class="produto-descricao">Tesoura ou máquina</p>
-            <p class="produto-preco">R$25,00</p>
-         </li>
-         <li>
-            <h2>Barba</h2>
-            <img>
-            <p class="produto-descricao">Navalha ou máquina</p>
-            <p class="produto-preco">R$25,00</p>
-         </li>
-         <li>
-           <h2>Cabelo e Barba</h2>
-            <img>
-            <p class="produto-descricao">Pacote completo</p>
-            <p class="produto-preco">R$45,00</p>
-         </li>
-         </ul>
-     </main>
-  </body>
-  </nav>
-  </body>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="produtos.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Cabelo</h2>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
+				</li>
+				<li>
+					<h2>Barba</h2>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<p class="produto-preco">R$ 25,00</p>
+				</li>
+				<li>
+					<h2>Cabelo e Barba</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<p class="produto-preco">R$ 45,00</p>
+				</li>
+			</ul>
+		</main>
+	</body>
 </html>
