--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <header>
         <h1 class="titulo-principal">Barbearia alura</h1>
     </header>
-    <img src="banner.jpg">
+    <img id="banner" src="banner.jpg">
     <div class="principal">
         <h2> Sobre a Barbearia Alura </h2>
 
