--- a/contato.html
+++ b/contato.html
@@ -24,11 +24,13 @@
     <main>
      <form>
       <label for="nomesobrenome">Nome e Sobrenome</label>
-      <input type="text" id="nomesobrenome">
+      <input type="text" id="nomesobrenome" class="input-padrao">
       <label for="email">Email</label>
-      <input type="text" id="email">
+      <input type="text" id="email" class="input-padrao">
       <label for="telefone">Telefone</label>
-      <input type="text" id"telefone">
+      <label for="mensagem">mensagem</label>
+      <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+      <input type="text" id="telefone" class="input-padrao">
       <input type="submit" value="Enviar formulário">
      </form>
     </main>
