--- a/contato.html
+++ b/contato.html
@@ -26,8 +26,9 @@
       <label for="nomesobrenome">Nome e Sobrenome</label>
       <input type="text" id="nomesobrenome" class="input-padrao">
       <label for="email">Email</label>
-      <input type="text" id="email" class="input-padrao">
+      <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
       <label for="telefone">Telefone</label>
+      <input type="tell" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
       <label for="mensagem">mensagem</label>
       <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
       <div>
