--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
       <label for="email">Email</label>
       <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
       <label for="telefone">Telefone</label>
-      <input type="tell" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
+      <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
       <label for="mensagem">mensagem</label>
       <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
       <div>
