--- a/contato.html
+++ b/contato.html
@@ -31,8 +31,8 @@
       <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
       <label for="mensagem">mensagem</label>
       <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
-      <div>
-    <p>Como prefere o nosso contato?</p>
+      <fieldset>
+    <legend>Como prefere o nosso contato?</legend>
     <label for="radio-email">
         <input type="radio" name="contato" value="email" id="radio-email">
         Email
@@ -47,15 +47,15 @@
         <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
         WhatsApp
     </label>
-    </div>
-    <div>
-    <p>Qual horário prefere ser atendido?</p>
+      </fieldset>
+    <fieldset>
+    <legend>Qual horário prefere ser atendido?</legend>
     <select>
         <option>Manhã</option>
         <option>Tarde</option>
         <option>Noite</option>
     </select>
-    </div>
+    </fieldset>
       <input type="text" id="telefone" class="input-padrao">
       <input type="submit" value="Enviar formulário">
      </form>
