--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
             clientes.</p>
     </section>
+    <section class="mapa"></section>
     <section class="beneficios">
         <h3 class="Titulo-secundario">Benefícios</h3>
         <ul>
@@ -50,6 +51,9 @@
             <li class="itens">Profissionais qualificados</li>
         </ul>
         <img src="beneficios.jpg" class="imagem-beneficios"
+	<div class="video">
+	    <iframe>
+        </div>
 		</section>
 	</main>
 		
