--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
 		<section class="mapa">
     			<h3 class="titulo-principal">Nosso estabelecimento</h3>
     			<p>Nosso estabelecimento está localizado no coração da cidade.</p>
-   			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.8356030664895!2d-49.26395912540408!3d-25.510528736081273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dcfb13ce7a3fd1%3A0x6273eea597ec9690!2sSupermercado%20Jacomar%20-%20Xaxim!5e0!3m2!1spt-BR!2sbr!4v1716806440197!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
+			<div class="mapa-conteudo">
+   				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.8356030664895!2d-49.26395912540408!3d-25.510528736081273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dcfb13ce7a3fd1%3A0x6273eea597ec9690!2sSupermercado%20Jacomar%20-%20Xaxim!5e0!3m2!1spt-BR!2sbr!4v1716806440197!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
 		</section>
 		<section class="beneficios">
 			<h3 class="titulo-principal">Benefícios</h3>
-
+		<div class="conteudo-beneficios">
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
 				<li class="itens">Profissionais Qualificados</li>
-			</ul>
-
-			<img src="beneficios.jpg" class="imagem-beneficios">
+			</ul><img src="beneficios.jpg" class="imagem-beneficios">
+		</div>
+			
 			<div class="video">
     			  <iframe width="560" height="315" src="https://www.youtube.com/embed/09v3eOdeZvA?si=3FNuMhdFswKQ8r24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</div>
