--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
 		<title>Produtos - Barbearia Alura</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="produtos.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
@@ -23,7 +23,7 @@
 		</header>
      <img id="banner" src="banner.jpg">
       <main>
-       <section class="principal">
+    	<section class="principal">
         <h2> Sobre a Barbearia Alura </h2>
     <img class="utensilios"src="utensilios.jpg" alt="utensilios">
 
@@ -37,8 +37,8 @@
         <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
             O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
             clientes.</p>
-    </section>
-    <section class="beneficios">
+    	</section>
+ 		<section class="beneficios">
         <h3 class="Titulo-secundario">Benefícios</h3>
         <ul>
             <li class="itens">Atendimento aos clientes</li>
@@ -70,7 +70,7 @@
 					<p class="produto-preco">R$ 45,00></p>
 				</li>
 			</ul>
-                </section>
+    	</section>
 		<footer>
 			<img src="logo-branco.png">
 			<p class="copyright">&copy; Nini-2B 2024</p>
